--- a/Laboration3/Views/Shared/_Layout.cshtml
+++ b/Laboration3/Views/Shared/_Layout.cshtml
@@ -28,6 +28,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="AddStudent">AddStudent</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="SelectWithDataSet">SelectWithDataSet</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="SelectWithReader">SelectWithReader</a>
+                        </li>
                     </ul>
                 </div>
             </div>
