--- a/Laboration3/Views/Student/SelectWithDataSet.cshtml
+++ b/Laboration3/Views/Student/SelectWithDataSet.cshtml
@@ -44,9 +44,9 @@
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.StudentId/* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { id = item.StudentId/* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.StudentId/* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new { id = item.StudentId}) |
+                @Html.ActionLink("Details", "Details", new { id = item.StudentId}) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.StudentId})
             </td>
         </tr>
 }
