--- a/Laboration3/Views/Shared/_Layout.cshtml
+++ b/Laboration3/Views/Shared/_Layout.cshtml
@@ -34,6 +34,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="SelectWithReader">SelectWithReader</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Filtrering">Filtrering</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Filtrering2">Filtrering2</a>
+                        </li>
                     </ul>
                 </div>
             </div>
