Filtrering 3 och börjat på sortering

--- a/Laboration3/Views/Shared/_Layout.cshtml
+++ b/Laboration3/Views/Shared/_Layout.cshtml
@@ -40,6 +40,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Filtrering2">Filtrering2</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Filtrering3">Filtrering3</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Sortering">Sortering</a>
+                        </li>
                     </ul>
                 </div>
             </div>
