--- a/Laboration3/Views/Shared/_Layout.cshtml
+++ b/Laboration3/Views/Shared/_Layout.cshtml
@@ -49,6 +49,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Search">Search</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="UploadImage">UploadImage</a>
+                        </li>
                     </ul>
                 </div>
             </div>
