bråket med bilderna fortsätter

--- a/Laboration3/Views/Student/Details.cshtml
+++ b/Laboration3/Views/Student/Details.cshtml
@@ -9,6 +9,10 @@
 <div>
     <h4>Student</h4>
     <hr />
+
+    <img src="~/Image/@Html.DisplayFor(model =>model.imgPath)" style="height:200px;width:200px;"/>
+
+    <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.StudentId)
