--- a/Laboration3/Views/Student/AddStudent.cshtml
+++ b/Laboration3/Views/Student/AddStudent.cshtml
@@ -8,9 +8,11 @@
 
 <h4>Student</h4>
 <hr />
+@using (Html.BeginForm("AddStudent", "Student", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            {
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AddStudent">
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
@@ -27,12 +29,17 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
+                <div class="form-group">
+                        <label for="file">Select an image:</label>
+                        <input type="file" name="file" id="file" class="form-control-file">
+                    </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
-        </form>
+
     </div>
 </div>
+}
 
 <p>
 
