--- a/Laboration3/Views/Student/Delete.cshtml
+++ b/Laboration3/Views/Student/Delete.cshtml
@@ -10,6 +10,8 @@
 <div>
     <h4>Student</h4>
     <hr />
+    <img src="~/Image/@Html.DisplayFor(model =>model.imgPath)" style="height:200px;width:200px;"/>
+<hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.StudentId)
