--- a/Laboration3/Views/Student/Edit.cshtml
+++ b/Laboration3/Views/Student/Edit.cshtml
@@ -8,6 +8,10 @@
 
 <h4>Student</h4>
 <hr />
+
+<img src="~/Image/@Html.DisplayFor(model =>model.imgPath)" style="height:200px;width:200px;"/>
+<hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
